# English-Liminal-

./: .env.example  .gitignore  CHANGELOG.md  CODEX_RUNBOOK.md  CONTRIBUTING.md  ISSUES.md  Makefile  PR_DESCRIPTION.md  README.md  package.json
.github/: PR_DESCRIPTION.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: README.md  ci.yml  deploy-landing.yml  mobile.yml  release.yml
app/: pubspec.yaml
app/lib/: main.dart
app/lib/screens/: home.dart  ping.dart  rinse.dart  (+2 more)
assets/roles/: qa-engineer-abroad.yaml
assets/scripts/: bug-report-writing-01.yaml  cafe-to-go-01.yaml  code-review-feedback-01.yaml  pick-up-kid-kindergarten-01.yaml  qa-interview-technical-01.yaml  standup-update-01.yaml
core/: Cargo.toml
core/examples/: telemetry_integration.rs
core/src/: api.rs  lib.rs  monetization.rs  retention.rs  roles.rs  runner.rs  scripts.rs  storage.rs  telemetry.rs  validator.rs
core/tests/: ffi_integration.rs  role_lifecycle.rs
docs/: ARCHITECTURE.md  MONETIZATION.md  ROLE_ENGINE.md  TELEMETRY.md  V1.1_FLOW.md
examples/: flutter_monetization_service.dart  flutter_telemetry_service.dart
landing/: ANIMATIONS.md  DEPLOYMENT.md  MARKETING_ELEMENTS.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
landing/public/: OG_IMAGE_SPEC.md
marketing/: MARKETING_STRATEGY.md
marketing/aso/: app-store-ios.md  google-play.md
marketing/email-campaigns/: onboarding-drip.md
marketing/landing-page/: LANDING_PAGE_COPY.md
scripts/: README.md  build-android.sh  build-ios.sh  build.sh  generate-bindings.sh
(+65 files in other folders)
