[package]
name = "liminal_english_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "liminal_cli"
path = "src/bin/liminal_cli.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# FFI
flutter_rust_bridge = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
